--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,31 @@ asgiref==3.7.2
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.2.0
+coverage==7.2.7
 cryptography==41.0.2
 Deprecated==1.2.14
 Django==4.2.3
+django-cors-headers==4.2.0
 django-oauth-toolkit==2.3.0
+django-rest-registration==0.8.2
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+execnet==2.0.2
 idna==3.4
+iniconfig==2.0.0
 jwcrypto==1.5.0
 oauthlib==3.2.2
+packaging==23.1
+pluggy==1.2.0
 pycparser==2.21
+PyJWT==2.8.0
+pytest==7.4.0
+pytest-cov==4.1.0
+pytest-django==4.5.2
+pytest-xdist==3.3.1
 pytz==2023.3
 requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 urllib3==2.0.3
 wrapt==1.15.0
