coverage up to 88%

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,9 @@
 DJANGO_SETTINGS_MODULE = _config.settings
 python_files = tests.py test_*.py *_tests.py tests*.py
 filterwarnings = ignore::DeprecationWarning
-;addopts = "-W ignore::DeprecationWarning"
 ; for x-dist, but not effective:
 ;addopts = "-n 1"
+
+
+;command to run:
+; pytest --cov-report term:skip-covered --cov-report term-missing --cov
