--- a/pytest.ini
+++ b/pytest.ini
@@ -6,5 +6,5 @@ filterwarnings = ignore::DeprecationWarning
 ;addopts = "-n 1"
 
 
-;command to run:
+;command to run to get coverage:
 ; pytest --cov-report term:skip-covered --cov-report term-missing --cov
