--- a/.gitignore
+++ b/.gitignore
@@ -618,3 +618,6 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,react,reactnative,venv,test
+
+
+*migrations*
